syntax = "proto3";

option csharp_namespace = "GrpcService";

package productGRPC;

service Products {
  rpc Get (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string productID = 1;
}

message ProductResponse {
  Product product = 1;
}

message Product {
	string id = 1;
	string name = 2;
	float price = 3;
	float stock = 4;
}
